--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^16.0.0",
     "@supabase/supabase-js": "^2.24.0",
     "ngx-cookie-service": "^16.0.0",
+    "ngx-toastr": "^17.0.2",
     "primeicons": "^6.0.1",
     "primeng": "^16.0.0-rc.2",
     "rxjs": "~7.8.0",
